# perps-indexer

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.linux  Dockerfile.prebuilt  EC2_DEPLOYMENT.md  HL_HISTORIC_S3.md  Justfile  README.md  charts.txt  deny.toml  docker-compose.yaml  docker-compose.yml  fix_build.sh  rust-toolchain.toml  rustfmt.toml  schema.md  update_dashboards.py
.claude/: project.md  style.md  workflow.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: backoff.rs  config.rs  error.rs  lib.rs  telemetry.rs
grafana/: README.md
grafana/provisioning/dashboards/: address-inspector.json  dashboard.yml  data-ingestion.json  hyperliquid-overview.json  markets-overview.json  trader-analytics.json  whale-tracker.json
grafana/provisioning/datasources/: postgres.yml
indexer/: Cargo.toml
indexer/src/: app.rs  incremental_stats.rs  main.rs  market.rs  model.rs  pipeline.rs  store.rs
indexer/src/ingest/: mod.rs  s3_source.rs
migrations/: 0001_complete_schema.sql  0001_init.sql  0002_hourly_user_stats.down.sql  0002_hourly_user_stats.sql  0005_optimize_market_type_queries.sql  0006_hourly_materialized_views.sql  0007_market_summary_view.sql  0008_trader_analytics_views.sql
scripts/: backfill-loop.sh  ec2-backfill.sh  ensure_matview.sql  indexer-backfill.service
