[workspace]
members = ["core", "indexer"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Web & API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "bigdecimal", "rust_decimal"] }
rust_decimal = { version = "1.36", features = ["serde"] }
bigdecimal = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Error handling
thiserror = "1.0.69"
anyhow = "1.0"

# Configuration
config = "0.14"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"
bytes = "1.8"
async-trait = "0.1"
once_cell = "1.20"
governor = "0.6"

# AWS SDK
aws-config = "1.1"
aws-sdk-s3 = "1.14"

# Compression
lz4_flex = "0.11"

# Development
pretty_assertions = "1.4"
proptest = "1.5"
criterion = { version = "0.5", features = ["async_tokio"] }