[package]
name = "indexer_core"
version.workspace = true
edition.workspace = true

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Configuration
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Utilities
chrono = { workspace = true }
tokio = { workspace = true }
backoff = { workspace = true }
once_cell = { workspace = true }